--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
     pre_build:
         commands:
             - pip install poetry
-            - apt-get update && apt-get install -y --no-install-recommends libpq-dev python3-dev gcc python3-psycopg2 tzdata gettext && rm -rf /var/lib/apt/lists/*
+            - yum update && yum install -y --no-install-recommends libpq-dev python3-dev gcc python3-psycopg2 tzdata gettext && rm -rf /var/lib/apt/lists/*
     build:
         commands:
             - poetry config virtualenvs.create false && poetry install --no-dev
