--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,3 +11,6 @@ phases:
         commands:
             - poetry config virtualenvs.create false && poetry install --no-dev
             
+artifacts:
+    files:
+        - 'target/ServiceSendMessage.jar'
