--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,20 +1,26 @@
 version: 0.2
 phases:
-    install:
-        runtime-versions:
-            python: 3.11
-
     pre_build:
         commands:
-            - ls
-            - pip install poetry
+            - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 230291670968.dkr.ecr.us-east-1.amazonaws.com
+            - CURRENT_VERSION=$(echo aws ecr describe-images --repository-name inscore/service_send_message --region us-east-1 --query 'sort_by(imageDetails,& imagePushedAt)[-1].imageTags' | grep v | grep -Eo '[0-9]' |  head -1)
+            - NEW_VERSION = $(echo expr $(CURRENT_VERSION) + 1 )
 
     build:
         commands:
-            - poetry config virtualenvs.create false && poetry install --no-dev
+            commands:
+            - docker  build -t service_send_message .
+
+            - docker tag service_send_message:latest 230291670968.dkr.ecr.us-east-1.amazonaws.com/inscore/service_send_message:v$(NEW_VERSION)
+    post_build:
+      commands:
+        - echo Build completed on `date`
+        - echo Pushing the Docker images...
+        - docker push 230291670968.dkr.ecr.us-east-1.amazonaws.com/inscore/service_send_message:v$(NEW_VERSION)
+        - echo Writing image definitions file...
+        - printf '[{"name":"hello-world","imageUri":"%s"}]' 230291670968.dkr.ecr.us-east-1.amazonaws.com/inscore/service_send_message:v$(NEW_VERSION) > imagedefinitions.json
+
             
 artifacts:
     files:
-        - './*'
-        - './handlers/*'
-        - './data_models/*'
+        - './imagedefinitions.json'
