--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,7 @@ phases:
         commands:
           - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 230291670968.dkr.ecr.us-east-1.amazonaws.com
           - CURRENT_VERSION=$(echo aws ecr describe-images --repository-name inscore/service_send_message --region us-east-1 --query 'sort_by(imageDetails,& imagePushedAt)[-1].imageTags' | grep v | grep -Eo '[0-9]' |  head -1)
+          - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
           - IMAGE_TAG=$(echo expr $(CURRENT_VERSION) + 1)
 
     build:
