--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,22 +4,21 @@ phases:
     pre_build:
         commands:
           - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 230291670968.dkr.ecr.us-east-1.amazonaws.com
-          - CURRENT_VERSION=$(shell aws ecr describe-images --repository-name inscore/service_send_message --region us-east-1 --query 'sort_by(imageDetails,& imagePushedAt)[-1].imageTags' | grep v | grep -Eo '[0-9]' |  head -1)
           - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-          - IMAGE_TAG=$(shell expr $(CURRENT_VERSION) + 1)
-          - IMAGE=${COMMIT_HASH:=latest}
+          - IMAGE_TAG=${COMMIT_HASH:=latest}
 
     build:
         commands:
-          - docker  build -t service_send_message .
-          - docker tag service_send_message:latest 230291670968.dkr.ecr.us-east-1.amazonaws.com/inscore/service_send_message:$(IMAGE)
+          - docker  build -t service_send_message:latest .
+          - docker tag service_send_message:latest 230291670968.dkr.ecr.us-east-1.amazonaws.com/inscore/service_send_message:$IMAGE
     post_build:
         commands:
           - echo Build completed on `date`
           - echo Pushing the Docker images...
           - docker push 230291670968.dkr.ecr.us-east-1.amazonaws.com/inscore/service_send_message:latest
+          - docker push 230291670968.dkr.ecr.us-east-1.amazonaws.com/inscore/service_send_message:$IMAGE
           - echo Writing image definitions file...
-          - printf '[{"name":"hello-world","imageUri":"%s"}]' 230291670968.dkr.ecr.us-east-1.amazonaws.com/inscore/service_send_message:latest > imagedefinitions.json
+          - printf '[{"name":"hello-world","imageUri":"%s"}]' 230291670968.dkr.ecr.us-east-1.amazonaws.com/inscore/service_send_message:$IMAGE > imagedefinitions.json
 
             
 artifacts:
