--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,8 +4,7 @@ phases:
     pre_build:
         commands:
           - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 230291670968.dkr.ecr.us-east-1.amazonaws.com
-          - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-          - IMAGE_TAG=${COMMIT_HASH:=latest}
+          - IMAGE_TAG=v10
 
     build:
         commands:
@@ -16,7 +15,6 @@ phases:
           - echo Build completed on `date`
           - echo Pushing the Docker images...
           - docker push 230291670968.dkr.ecr.us-east-1.amazonaws.com/inscore/service_send_message:latest
-          - docker push 230291670968.dkr.ecr.us-east-1.amazonaws.com/inscore/service_send_message:$IMAGE
           - echo Writing image definitions file...
           - printf '[{"name":"hello-world","imageUri":"%s"}]' 230291670968.dkr.ecr.us-east-1.amazonaws.com/inscore/service_send_message:$IMAGE > imagedefinitions.json
 
