--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
     pre_build:
         commands:
           - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 230291670968.dkr.ecr.us-east-1.amazonaws.com
-          - IMAGE_TAG=v10
+          - IMAGE_TAG=$(exho "v10")
 
     build:
         commands:
