--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,12 +4,11 @@ phases:
     pre_build:
         commands:
           - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 230291670968.dkr.ecr.us-east-1.amazonaws.com
-          - IMAGE_TAG=$(exho "v10")
 
     build:
         commands:
           - docker  build -t service_send_message:latest .
-          - docker tag service_send_message:latest 230291670968.dkr.ecr.us-east-1.amazonaws.com/inscore/service_send_message:$IMAGE
+          - docker tag service_send_message:latest 230291670968.dkr.ecr.us-east-1.amazonaws.com/inscore/service_send_message:latest
     post_build:
         commands:
           - echo Build completed on `date`
