modify variables ambiente

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,17 +7,16 @@ phases:
 
     build:
         commands:
-          - docker  build -t service_send_message:latest .
-          - docker tag service_send_message:latest 230291670968.dkr.ecr.us-east-1.amazonaws.com/inscore/service_send_message:v10
+          - docker  build -t service_send_message .
+          - docker tag service_send_message:latest 230291670968.dkr.ecr.us-east-1.amazonaws.com/inscore/service_send_message:v15
     post_build:
         commands:
           - echo Build completed on `date`
           - echo Pushing the Docker images...
-          - docker push 230291670968.dkr.ecr.us-east-1.amazonaws.com/inscore/service_send_message:v10
+          - docker push 230291670968.dkr.ecr.us-east-1.amazonaws.com/inscore/service_send_message:v15
           - echo Writing image definitions file...
-          - printf '[{"name":"hello-world","imageUri":"%s"}]' 230291670968.dkr.ecr.us-east-1.amazonaws.com/inscore/service_send_message:v10 > imagedefinitions.json
+          - printf '[{"name":"hello-world","imageUri":"%s"}]' 230291670968.dkr.ecr.us-east-1.amazonaws.com/inscore/service_send_message:v15 > imagedefinitions.json
 
-            
 artifacts:
     files:
         - './imagedefinitions.json'
